--- a/src/components/UI/Navbar.module.css
+++ b/src/components/UI/Navbar.module.css
@@ -4,9 +4,14 @@
 }
 
 .navbar{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    background: rgb(12, 12, 59);
 }
 
 .navlinks-container{
@@ -14,11 +19,12 @@
     width: 50%;
     display: flex;
     justify-content: space-between;
+    z-index: 5;
 }
 .logo{
     align-self:center;
     padding: 5px;
-    margin-inline: 10px;
+    margin-inline-start: 2rem;
 }
 
 .logo img{
@@ -35,16 +41,38 @@
 .mobile-navlink-container{
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-around;
     z-index: 10;
     width: 100%;
     height: 100vh;
     padding: 1em;
+    animation: appear 1s;
+}
+
+@keyframes appear {
+    from{
+        opacity: 0%;
+    }
+    to{
+        opacity: 100%;
+    }
 }
 
 .hide{
     display: none;
+    animation: disappear 1s;  
 }
+
+@keyframes disappear {
+    from{
+        opacity: 100%;
+    }
+    to{
+        opacity: 0%;
+    }
+}
+
+
 
 .align-left{
     align-self: end;
@@ -60,5 +88,8 @@
     }
     .ham{
         display: block;
+    }
+    .logo{
+        margin-inline-start: 1rem;
     }
 }
