--- a/src/components/UI/Navbar.module.css
+++ b/src/components/UI/Navbar.module.css
@@ -11,7 +11,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    background: rgb(12, 12, 59);
+    background: rgba(12, 12, 59, 0.779);
 }
 
 .navlinks-container{
@@ -43,9 +43,10 @@
     flex-direction: column;
     justify-content: space-around;
     z-index: 10;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     padding: 1em;
+    background-color: rgba(8, 31, 100, 0.598);
     animation: appear 1s;
 }
 
