--- a/src/components/UI/MobileNav.module.css
+++ b/src/components/UI/MobileNav.module.css
@@ -1,9 +1,12 @@
 .mobile-navlink-container{
+    margin: 0;
+    padding: 0;
     display: flex;
     flex-direction: column;
     z-index: 10;
     width: 100%;
     height: 100vh;
+    background-color: #4161a8;
 }
 
 .hide{
