--- a/src/components/UI/Navbar.module.css
+++ b/src/components/UI/Navbar.module.css
@@ -11,7 +11,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    background: rgba(12, 12, 59, 0.779);
+    background-color: #4161a8;
 }
 
 .navlinks-container{
@@ -19,7 +19,6 @@
     width: 50%;
     display: flex;
     justify-content: space-between;
-    z-index: 5;
 }
 .logo{
     align-self:center;
@@ -42,7 +41,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    z-index: 10;
     width: 100vw;
     height: 100vh;
     padding: 1em;
