--- a/src/components/UI/Navbar.module.css
+++ b/src/components/UI/Navbar.module.css
@@ -1,96 +1,94 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+	margin: 0;
+	padding: 0;
 }
 
-.navbar{
-    position: fixed;
+.navbar {
+	/* position: fixed;
     top: 0;
-    left: 0;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    background: rgba(12, 12, 59, 0.779);
+    left: 0; */
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	background: rgba(12, 12, 59, 0.779);
 }
 
-.navlinks-container{
-    align-self: center;
-    width: 50%;
-    display: flex;
-    justify-content: space-between;
-    z-index: 5;
+.navlinks-container {
+	align-self: center;
+	width: 50%;
+	display: flex;
+	justify-content: space-between;
+	z-index: 5;
 }
-.logo{
-    align-self:center;
-    padding: 5px;
-    margin-inline-start: 2rem;
-}
-
-.logo img{
-    transform: scale(1.2);
+.logo {
+	align-self: center;
+	padding: 5px;
+	margin-inline-start: 2rem;
 }
 
-.ham{
-    align-self: center;
-    color:white;
-    margin-inline:5px;
-    display: none;
+.logo img {
+	transform: scale(1.2);
 }
 
-.mobile-navlink-container{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    z-index: 10;
-    width: 100vw;
-    height: 100vh;
-    padding: 1em;
-    background-color: rgba(8, 31, 100, 0.598);
-    animation: appear 1s;
+.ham {
+	align-self: center;
+	color: white;
+	margin-inline: 5px;
+	display: none;
+}
+
+.mobile-navlink-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	z-index: 10;
+	width: 100vw;
+	height: 100vh;
+	padding: 1em;
+	background-color: rgba(8, 31, 100, 0.598);
+	animation: appear 1s;
 }
 
 @keyframes appear {
-    from{
-        opacity: 0%;
-    }
-    to{
-        opacity: 100%;
-    }
+	from {
+		opacity: 0%;
+	}
+	to {
+		opacity: 100%;
+	}
 }
 
-.hide{
-    display: none;
-    animation: disappear 1s;  
+.hide {
+	display: none;
+	animation: disappear 1s;
 }
 
 @keyframes disappear {
-    from{
-        opacity: 100%;
-    }
-    to{
-        opacity: 0%;
-    }
+	from {
+		opacity: 100%;
+	}
+	to {
+		opacity: 0%;
+	}
 }
 
-
-
-.align-left{
-    align-self: end;
+.align-left {
+	align-self: end;
 }
-.hamImg{
-    width: 40px;
-    height: 35px;
+.hamImg {
+	width: 40px;
+	height: 35px;
 }
 
-@media (max-width: 1000px){
-    .navlinks-container{
-        display: none;
-    }
-    .ham{
-        display: block;
-    }
-    .logo{
-        margin-inline-start: 1rem;
-    }
+@media (max-width: 1000px) {
+	.navlinks-container {
+		display: none;
+	}
+	.ham {
+		display: block;
+	}
+	.logo {
+		margin-inline-start: 1rem;
+	}
 }
