--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,15 +1,28 @@
-.headDiv{
-    width: 80%;
-    height: 100vh;
-    color: whitesmoke;
+.headDiv {
+	width: 100%;
+	height: 100vh;
+	color: rgb(255, 255, 255);
+	background-color: rgb(41, 41, 54);
 
-    display: flex;
-    flex-direction: column;
+	display: flex;
+	flex-direction: column;
 
-    text-align: center;
+	text-align: center;
 
-    padding: 1em;
-    margin: auto;
-    justify-content: center;
-    align-items: center;
+	/* padding: 1em; */
+	margin: auto;
+	justify-content: center;
+	align-items: center;
+
+	animation: appearHead 1s;
+}
+
+@keyframes appearHead {
+	from {
+		opacity: 0;
+	}
+
+	to {
+		opacity: 1;
+	}
 }
