--- a/src/components/UI/Navbar.module.css
+++ b/src/components/UI/Navbar.module.css
@@ -4,22 +4,22 @@
 }
 
 .navbar {
-	/* position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    background: rgba(12, 12, 59, 0.779);
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	background: rgba(12, 12, 59, 1);
 }
 
-.navlinks-container{
-    align-self: center;
-    width: 50%;
-    display: flex;
-    justify-content: space-between;
-    z-index: 5;
+.navlinks-container {
+	align-self: center;
+	width: 50%;
+	display: flex;
+	justify-content: space-between;
+	z-index: 5;
 }
 .logo {
 	align-self: center;
@@ -38,16 +38,16 @@
 	display: none;
 }
 
-.mobile-navlink-container{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    z-index: 10;
-    width: 100vw;
-    height: 100vh;
-    padding: 1em;
-    background-color: rgba(8, 31, 100, 0.598);
-    animation: appear 1s;
+.mobile-navlink-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	z-index: 10;
+	width: 100vw;
+	height: 100vh;
+	padding: 1em;
+	background-color: rgba(8, 31, 100, 0.598);
+	animation: appear 1s;
 }
 
 @keyframes appear {
