--- a/src/components/Event/EventImage.module.css
+++ b/src/components/Event/EventImage.module.css
@@ -1,9 +1,18 @@
 .eventImage{
-    width: 100%;
-    height:300px;
+    min-width: 370px;
+    min-height:250px;
+    border-radius: 5px;
 }
 
 .eventImage img{
     width: 100%;
     height: 100%;
+}
+
+@media (max-width: 1000px){
+    
+    .eventImage{
+        min-width: 100%;
+        height: 100px;
+    }
 }
