feat: added event modal

--- a/src/components/Event/EventsContainer.module.css
+++ b/src/components/Event/EventsContainer.module.css
@@ -13,9 +13,8 @@
 }
 
 .heading{
-    color:white;
     text-align: center;
-    margin: 1em;
+    margin-top: 2em;
 }
 
 @media (max-width: 1000px){
