--- a/src/components/Event/Event.module.css
+++ b/src/components/Event/Event.module.css
@@ -4,14 +4,24 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-radius: 2px;
-    border: 1px solid rgb(75, 70, 57);
+    border-radius: 4px;
+
     margin-block-end: 1.5rem;
     margin-inline: 1rem;
-    box-shadow: rgba(200, 200, 20, 0.1) 0px 5px 15px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    animation: appear 2s;
 }
 
 .eventStyle:hover{
-    box-shadow: rgba(100, 200, 20, 0.20) 0px 5px 15px;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 15px;
     cursor: pointer;
+}
+
+@keyframes appear{
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
 }
