--- a/src/components/Event/Event.module.css
+++ b/src/components/Event/Event.module.css
@@ -5,9 +5,10 @@
     flex-direction: column;
     align-items: center;
     border-radius: 4px;
-
+    z-index:20;
     margin-block-end: 1.5rem;
     margin-inline: 1rem;
+    background: none;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     animation: appear 2s;
 }
