--- a/src/components/UI/MobileNav.module.css
+++ b/src/components/UI/MobileNav.module.css
@@ -4,9 +4,9 @@
     display: flex;
     flex-direction: column;
     z-index: 10;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
-    background-color: #4161a8;
+    background-color: rgb(11, 11, 105);
 }
 
 .hide{
