--- a/src/components/UI/Navbar.module.css
+++ b/src/components/UI/Navbar.module.css
@@ -7,6 +7,7 @@
 	position: fixed;
 	top: 0;
 	left: 0;
+	z-index: 100;
 	width: 100%;
 	display: flex;
 	flex-direction: row;
@@ -46,7 +47,7 @@
 	width: 100vw;
 	height: 100vh;
 	padding: 1em;
-	background-color: rgba(8, 31, 100, 0.598);
+	background-color: rgb(11, 11, 105);
 	animation: appear 1s;
 }
 
