--- a/src/components/UI/Navbar.module.css
+++ b/src/components/UI/Navbar.module.css
@@ -8,6 +8,7 @@
 	top: 0;
 	left: 0;
 	width: 100%;
+	z-index: 10000000000;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
