--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,13 +1,15 @@
 .headDiv {
 	width: 100%;
 	height: 100vh;
-	color: rgb(59, 37, 37);
+	/* color: rgb(59, 37, 37); */
+	color: white;
+
 	background-color: rgb(41, 41, 54);
 
 	display: flex;
 	flex-direction: column;
 
-	background: url('../assets/Backgrounds/bg3.jpg');
+	background: url('../assets/Backgrounds/bg1.jpg');
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -24,7 +26,7 @@
 	animation: appearHead 1s;
 }
 
-@keyframes appearHead{
+@keyframes appearHead {
 	from {
 		opacity: 0;
 	}
