--- a/src/components/Team/Team.css
+++ b/src/components/Team/Team.css
@@ -1,4 +1,4 @@
-.section-white {
+/* .section-white {
 	background: #fff;
 	padding: 70px 0;
 	display: flex;
@@ -124,4 +124,4 @@ ul.team-icon li a.dribble{
 	-ms-transition: all 0.25s ease-in-out;
 	-o-transition: all 0.25s ease-in-out;
 	transition: all 0.25s ease-in-out;
-}
+} */
