--- a/src/components/UI/Navbar.module.css
+++ b/src/components/UI/Navbar.module.css
@@ -7,13 +7,12 @@
 	position: fixed;
 	top: 0;
 	left: 0;
-	z-index: 100;
 	width: 100%;
 	z-index: 10000000000;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-	background: rgba(12, 12, 59, 1);
+	background: #242830;
 }
 
 .navlinks-container {
@@ -21,7 +20,6 @@
 	width: 50%;
 	display: flex;
 	justify-content: space-between;
-	z-index: 5;
 }
 .logo {
 	align-self: center;
@@ -36,7 +34,7 @@
 .ham {
 	align-self: center;
 	color: white;
-	margin-inline: 5px;
+	/* margin-inline: 5px; */
 	display: none;
 }
 
@@ -44,14 +42,17 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
-	z-index: 10;
+	/* z-index: 10; */
 	width: 100vw;
 	height: 100vh;
 	padding: 1em;
-	background-color: rgb(11, 11, 105);
+	/* background-color: rgb(11, 11, 105); */
 	animation: appear 1s;
 }
-
+.CrossHam {
+	margin-top: 0px;
+	margin-bottom: 16px;
+}
 @keyframes appear {
 	from {
 		opacity: 0%;
