--- a/src/components/Event/Event.module.css
+++ b/src/components/Event/Event.module.css
@@ -18,6 +18,29 @@
     cursor: pointer;
 }
 
+.buttonContainer {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+}
+.website {
+    font-size: 20px;
+    padding-inline: 15px;
+    padding-block: 10px;
+    border: 1px solid rgba(0, 140, 2, 0.527);
+    border-radius: 3px;
+    text-decoration: none;
+    color: white;
+    background-color: #e8be01;
+}
+
+
+@media (max-width: 800px){
+    .eventStyle{
+        min-height: 300px;
+    }
+}
 @keyframes appear{
     from{
         opacity: 0;
