--- a/src/components/Event/EventImage.module.css
+++ b/src/components/Event/EventImage.module.css
@@ -10,9 +10,12 @@
 	z-index: 20;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1200px) {
 	.eventImage {
 		min-width: 100%;
-		height: 100px;
+		min-height: 200px;
+	}
+	.eventImage img{
+		height: 200px;
 	}
 }
