--- a/src/components/EventModal/EventModal.module.css
+++ b/src/components/EventModal/EventModal.module.css
@@ -1,4 +1,4 @@
-.modalBackground{
+.modalBackground {
     position: fixed;
     top: 0;
     left: 0;
@@ -7,86 +7,135 @@
 
     z-index: 30;
 
-    background: url('../../assets/Backgrounds/bg2.jpg');
+    /* background: url('../../assets/Backgrounds/bg2.jpg');
         background-position: center;
             background-repeat: no-repeat;
-            background-size: cover;
-    /* background-color: rgba(0, 0, 0, 0.85); */
+            background-size: cover; */
+    background-color: rgba(0, 0, 0, 0.85);
     animation: appear 1s;
     animation-direction: alternate;
 }
 
-.modalCard{
+.modalCard {
     position: fixed;
     top: 20%;
-    left:25%;
-    width: 50vw;
-    min-height: 60vh;
+    left: 20%;
+    width: 60vw;
+    height: 500px;
     z-index: 40;
-    /* background-color: rgb(232, 232, 232); */
-    color:white;
+    background-color: rgba(18, 18, 18, 0.95);
+
+
+    /* background: url('../../assets/Backgrounds/bg2.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover; */
+
+
+    color: rgb(208, 208, 208);
+
+    /* border: 1px solid red; */
 
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
-    padding: 10px;
-    border-radius: 5px;
+    /* justsify-content: space-evenly; */
+    /* padding: 10px; */
+    border-radius: 5px; 
 
-    animation: appear 1s;
+    animation: appear 0.5s;
     animation-direction: alternate;
+    overflow-y: scroll;
 }
 
-.website{
+.website {
     font-size: 20px;
     padding-inline: 15px;
-    padding-block: 8px;
-    border: 1px solid rgba(0, 140, 2, 0.527); 
+    padding-block: 10px;
+    border: 1px solid rgba(0, 140, 2, 0.527);
     border-radius: 3px;
     text-decoration: none;
-    color:white;
+    color: white;
     background-color: #e8be01;
 }
 
-.website:hover{
+.website:hover {}
+
+.buttonContainer {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 50%;
 }
 
-@keyframes appear{
-    from{
+@keyframes appear {
+    from {
         opacity: 0;
     }
 
-    to{
+    to {
         opacity: 1;
     }
 }
 
-.close{
+.close {
     align-self: flex-start;
     width: 100%;
     text-align: right;
     cursor: pointer;
 }
 
-.eventHeading{
-    padding-block: 5px;
-}
-.title{
-    padding-block:5px;
+.eventHeading {
+    /* font-size: 10px; */
+    margin: 0;
+    padding: 0;
+    padding-top: 20px;
+    color: rgb(199, 199, 199);
 }
 
-.description{
+.title {
+    /* font-size: 10px; */
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    color: rgb(208, 208, 208);
+}
+
+.description {
     text-align: justify;
-    font-size: 20px;
-    padding: 15px; 
+    font-size: 18px;
+    padding-inline: 30px;
+    color: rgb(208, 208, 208);
 }
 
-@media (max-width: 1000px){
-    .modalCard{
-        width: 90%;
-        left : 2.3%;
+::-webkit-scrollbar{
+    width: 0.8rem;
+}
+
+::-webkit-scrollbar-track {
+    background: none;
+}
+::-webkit-scrollbar-thumb {
+    background: rgb(5, 117, 187);
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: rgb(5, 130, 208);
+}
+
+@media (max-width: 1000px) {
+    .modalCard {
+        width: 94%;
+        top:40%;
+        left: 3%;
         margin-inline: auto;
         top: 13%;
-        min-height: 80vh;
+        height: 80vh;
+        overflow-y: scroll;
+    }
+
+    .buttonContainer{
+        width: 90%;
     }
 }
+
