--- a/src/components/EventModal/EventModal.module.css
+++ b/src/components/EventModal/EventModal.module.css
@@ -136,6 +136,9 @@
 
     .buttonContainer{
         width: 90%;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 }
 
