--- a/src/components/EventModal/EventModal.module.css
+++ b/src/components/EventModal/EventModal.module.css
@@ -1,144 +1,143 @@
 .modalBackground {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
 
-    z-index: 30;
+	z-index: 30;
 
-    /* background: url('../../assets/Backgrounds/bg2.jpg');
+	/* background: url('../../assets/Backgrounds/bg2.jpg');
         background-position: center;
             background-repeat: no-repeat;
             background-size: cover; */
-    background-color: rgba(0, 0, 0, 0.85);
-    animation: appear 1s;
-    animation-direction: alternate;
+	background-color: rgba(0, 0, 0, 0.85);
+	animation: appear 1s;
+	animation-direction: alternate;
 }
 
 .modalCard {
-    position: fixed;
-    top: 20%;
-    left: 20%;
-    width: 60vw;
-    height: 500px;
-    z-index: 40;
-    background-color: rgba(18, 18, 18, 0.95);
+	position: fixed;
+	top: 20%;
+	left: 20%;
+	width: 60vw;
+	height: 500px;
+	z-index: 40;
+	background-color: rgba(18, 18, 18, 0.95);
 
-
-    /* background: url('../../assets/Backgrounds/bg2.jpg');
+	/* background: url('../../assets/Backgrounds/bg2.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover; */
 
+	color: rgb(208, 208, 208);
 
-    color: rgb(208, 208, 208);
+	/* border: 1px solid red; */
 
-    /* border: 1px solid red; */
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	/* justsify-content: space-evenly; */
+	/* padding: 10px; */
+	border-radius: 5px;
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    /* justsify-content: space-evenly; */
-    /* padding: 10px; */
-    border-radius: 5px; 
-
-    animation: appear 0.5s;
-    animation-direction: alternate;
-    overflow-y: scroll;
+	animation: appear 0.5s;
+	animation-direction: alternate;
+	overflow-y: scroll;
 }
 
 .website {
-    font-size: 20px;
-    padding-inline: 15px;
-    padding-block: 10px;
-    border: 1px solid rgba(0, 140, 2, 0.527);
-    border-radius: 3px;
-    text-decoration: none;
-    color: white;
-    background-color: #e8be01;
+	font-size: 20px;
+	padding-inline: 15px;
+	padding-block: 10px;
+	border: 1px solid rgba(0, 140, 2, 0.527);
+	border-radius: 3px;
+	text-decoration: none;
+	color: white;
+	background-color: #e8be01;
 }
 
-.website:hover {}
+.website:hover {
+}
 
 .buttonContainer {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 50%;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	width: 50%;
 }
 
 @keyframes appear {
-    from {
-        opacity: 0;
-    }
+	from {
+		opacity: 0;
+	}
 
-    to {
-        opacity: 1;
-    }
+	to {
+		opacity: 1;
+	}
 }
 
 .close {
-    align-self: flex-start;
-    width: 100%;
-    text-align: right;
-    cursor: pointer;
+	align-self: flex-start;
+	width: 100%;
+	text-align: right;
+	cursor: pointer;
 }
 
 .eventHeading {
-    /* font-size: 10px; */
-    margin: 0;
-    padding: 0;
-    padding-top: 20px;
-    color: rgb(199, 199, 199);
+	/* font-size: 10px; */
+	margin: 0;
+	padding: 0;
+	padding-top: 20px;
+	color: rgb(199, 199, 199);
 }
 
 .title {
-    /* font-size: 10px; */
-    text-align: center;
-    margin: 0;
-    padding: 0;
-    color: rgb(208, 208, 208);
+	/* font-size: 10px; */
+	text-align: center;
+	margin: 0;
+	padding: 0;
+	color: rgb(208, 208, 208);
 }
 
 .description {
-    text-align: justify;
-    font-size: 18px;
-    padding-inline: 30px;
-    color: rgb(208, 208, 208);
+	text-align: justify;
+	font-size: 18px;
+	padding-inline: 30px;
+	color: rgb(208, 208, 208);
 }
 
-::-webkit-scrollbar{
-    width: 0.8rem;
+::-webkit-scrollbar {
+	width: 10px;
 }
 
 ::-webkit-scrollbar-track {
-    background: none;
+	background: none;
 }
 ::-webkit-scrollbar-thumb {
-    background: rgb(5, 117, 187);
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background: rgb(5, 130, 208);
+	background: linear-gradient(
+		rgba(255, 255, 255, 0) 0%,
+		rgb(66 158 255) 35%,
+		rgba(255, 255, 255, 0) 100%
+	);
+	opacity: 0.8;
 }
 
 @media (max-width: 1000px) {
-    .modalCard {
-        width: 94%;
-        top:40%;
-        left: 3%;
-        margin-inline: auto;
-        top: 13%;
-        height: 80vh;
-        overflow-y: scroll;
-    }
+	.modalCard {
+		width: 94%;
+		top: 40%;
+		left: 3%;
+		margin-inline: auto;
+		top: 13%;
+		height: 80vh;
+		overflow-y: scroll;
+	}
 
-    .buttonContainer{
-        width: 90%;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
+	.buttonContainer {
+		width: 90%;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
 }
-
