--- a/src/components/Event/Event.module.css
+++ b/src/components/Event/Event.module.css
@@ -1,5 +1,5 @@
 .eventStyle{
-    min-height: 350px;
+    /* min-height: 350px; */
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -33,14 +33,10 @@
     text-decoration: none;
     color: white;
     background-color: #e8be01;
+    width: 100%;
+    text-align: center;
 }
 
-
-@media (max-width: 800px){
-    .eventStyle{
-        min-height: 300px;
-    }
-}
 @keyframes appear{
     from{
         opacity: 0;
