--- a/src/components/EventModal/EventModal.module.css
+++ b/src/components/EventModal/EventModal.module.css
@@ -18,13 +18,12 @@
 
 .modalCard {
 	position: fixed;
-	top: 20%;
-	left: 20%;
-	width: 60vw;
-	height: 500px;
+	top: 25%;
+	left: 27%;
+	width: 45vw;
+	height: auto;
 	z-index: 40;
 	background-color: rgba(18, 18, 18, 0.95);
-
 	/* background: url('../../assets/Backgrounds/bg2.jpg');
     background-position: center;
     background-repeat: no-repeat;
@@ -37,7 +36,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	/* justsify-content: space-evenly; */
+	/* justify-content: space-evenly; */
 	/* padding: 10px; */
 	border-radius: 5px;
 
@@ -50,11 +49,13 @@
 	font-size: 20px;
 	padding-inline: 15px;
 	padding-block: 10px;
-	border: 1px solid rgba(0, 140, 2, 0.527);
+	/* border: 1px solid rgba(0, 140, 2, 0.527); */
 	border-radius: 3px;
 	text-decoration: none;
+	text-align:center ;
 	color: white;
 	background-color: #e8be01;
+	width: 100%;
 }
 
 .website:hover {
@@ -64,7 +65,9 @@
 	display: flex;
 	justify-content: space-evenly;
 	align-items: center;
-	width: 50%;
+	width: 100%;
+	padding: 0;
+	margin: 0;
 }
 
 @keyframes appear {
@@ -82,20 +85,23 @@
 	width: 100%;
 	text-align: right;
 	cursor: pointer;
+	background-color: rgb(18, 18, 17);
 }
 
 .eventHeading {
 	/* font-size: 10px; */
-	margin: 0;
-	padding: 0;
-	padding-top: 20px;
-	color: rgb(199, 199, 199);
+	font-size: 28px;
+	margin-top: px;
+	margin-bottom: 3px;
+	line-height: 0;
+	color: rgb(68, 155, 246); 
 }
 
 .title {
 	/* font-size: 10px; */
 	text-align: center;
-	margin: 0;
+	font-size: 20px;
+	margin: 0px;
 	padding: 0;
 	color: rgb(208, 208, 208);
 }
@@ -104,6 +110,7 @@
 	text-align: justify;
 	font-size: 18px;
 	padding-inline: 30px;
+	line-height: 20px;
 	color: rgb(208, 208, 208);
 }
 
@@ -130,7 +137,7 @@
 		left: 3%;
 		margin-inline: auto;
 		top: 13%;
-		height: 80vh;
+		height: auto;
 		overflow-y: scroll;
 	}
 
