--- a/src/components/UI/Footer.css
+++ b/src/components/UI/Footer.css
@@ -82,7 +82,7 @@
 } */
 
 .footer-block {
-	margin-top: 1rem;
+	margin-top: 0.5rem;
 	/* align-self: flex-start; */
 }
 
@@ -98,7 +98,7 @@
 }
 
 .conduct-block {
-	margin-top: 1rem;
+	margin-top: 0.5rem;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-around;
@@ -124,7 +124,7 @@
 	justify-content: center;
 	align-items: center;
 	gap: 4px;
-	padding-bottom: 1rem;
+	/* padding-bottom: 1rem; */
 	margin-inline: 3rem;
 }
 
@@ -151,12 +151,12 @@
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
-	align-items: center;
+	/* align-items: center; */
 }
 
 .social-link {
 	margin: auto;
-	margin-bottom: 1rem;
+	margin-bottom: 0.5rem;
 }
 
 .social-link-container .icon {
@@ -270,7 +270,7 @@ h3 {
 .line {
 	width: 70%;
 	margin-block: none;
-	margin-inline: 20%;
+	margin-inline: 5%;
 	background-color: #0270d7;
 	height: 1px;
 }
@@ -281,7 +281,7 @@ h3 {
 }
 
 .tandc {
-	margin: 1rem;
+	margin: 0.5rem;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
