--- a/src/components/UI/Button.module.css
+++ b/src/components/UI/Button.module.css
@@ -1,12 +1,12 @@
-.btn{
-    background: none;
-    font-size: 20px;
-    color: rgb(255, 255, 255);
-    padding-inline: 20px;
-    padding-block: 10px;
-    width: 100%;
-    background-color: rgb(4, 101, 161);
-    border:none;
-    cursor: pointer;
-    border-radius: 2px;
+.btn {
+	background: none;
+	font-size: 20px;
+	color: rgb(255, 255, 255);
+	/* padding-inline: 20px; */
+	padding-block: 10px;
+	width: 100%;
+	background-color: rgb(4, 101, 161);
+	border: none;
+	cursor: pointer;
+	border-radius: 2px;
 }
