--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -4,12 +4,17 @@
 	color: rgb(59, 37, 37);
 	color: rgb(255, 177, 32);
 
-	background-color: rgb(19, 19, 19);
+	/* background-color:rgb(57, 99, 183); */
 
 	display: flex;
 	flex-direction: column;
 
-	/* background: url('../assets/Backgrounds/bg7.jpg');  */
+	background-image: url("../assets/Backgrounds/bg8.jpeg");
+
+	/* Set a specific height */
+	min-height: 400px;
+	/* Create the parallax scrolling effect */
+	background-attachment: fixed;
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -25,6 +30,11 @@
 
 .appearAnim{
 	animation: appearHead 1s;
+}
+
+h1, h3{
+	margin: 0;
+	padding: 0;
 }
 
 @keyframes appearHead {
