--- a/src/components/UI/BreakLine.module.css
+++ b/src/components/UI/BreakLine.module.css
@@ -1,6 +1,7 @@
 .breakline{
     width: 90%;
-    margin: auto;
+    margin: 2px;
+    margin-inline: auto;
     background-color: white;
     height: 1px;
 }
