--- a/src/components/UI/Button.module.css
+++ b/src/components/UI/Button.module.css
@@ -3,7 +3,7 @@
 	font-size: 20px;
 	color: rgb(255, 255, 255);
 	/* padding-inline: 20px; */
-	padding-block: 10px;
+	/* padding-block: 10px; */
 	width: 100%;
 	background-color: rgb(4, 101, 161);
 	border: none;
