--- a/src/components/Event/EventImage.module.css
+++ b/src/components/Event/EventImage.module.css
@@ -1,13 +1,23 @@
 .eventImage {
-	min-width: 370px;
-	min-height: 250px;
-	border-radius: 5px;
+	/* width: auto; */
+	/* height: 100%; */
+	/* border-radius: 10%; */
+	/* display: flex; */
+	/* justify-content: center; */
+	/* align-items: center; */
+	padding: 0;
+	margin: 0;
 }
 
 .eventImage img {
 	width: 100%;
-	height: 100%;
+	height: 250px;
+	/* border: 1px solid red; */
 	z-index: 20;
+	border-radius: 10%; 
+	padding: 0;
+	margin: 0;
+
 }
 
 @media (max-width: 1200px) {
