--- a/src/components/UI/Button.module.css
+++ b/src/components/UI/Button.module.css
@@ -2,11 +2,18 @@
 	background: none;
 	font-size: 20px;
 	color: rgb(255, 255, 255);
-	/* padding-inline: 20px; */
-	/* padding-block: 10px; */
+	height: 100%;
 	width: 100%;
-	background-color: rgb(4, 101, 161);
+	padding-block: 10px;
+	/* background-color: rgb(4, 101, 161); */
+	color:rgb(0, 122, 204);
 	border: none;
 	cursor: pointer;
 	border-radius: 2px;
+}	
+
+@media (max-width: 365px){
+	.btn{
+		padding-block: 25px;
+	}
 }
