--- a/src/components/EventModal/EventModal.module.css
+++ b/src/components/EventModal/EventModal.module.css
@@ -23,13 +23,13 @@
 	width: 45vw;
 	height: auto;
 	z-index: 40;
-	background-color: rgb(29 32 38);
+	background-color: rgb(234, 230, 230);
 	/* background: url('../../assets/Backgrounds/bg2.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover; */
 
-	color: rgb(246, 246, 246);
+	color: rgb(9, 9, 9);
 
 	/* border: 1px solid red; */
 
@@ -103,7 +103,7 @@
 	font-size: 20px;
 	margin: 0px;
 	padding: 0;
-	color: rgb(255, 255, 255);
+	color: rgb(0, 0, 0);
 }
 
 .description {
@@ -111,7 +111,7 @@
 	font-size: 18px;
 	padding-inline: 30px;
 	line-height: 20px;
-	color: rgb(255, 255, 255);
+	color: rgb(0, 0, 0);
 	opacity: 0.7;
 }
 
