fix: landing page

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -6,8 +6,8 @@
 
 	/* background-color:rgb(57, 99, 183); */
 
-	display: flex;
-	flex-direction: column;
+	/* display: flex; */
+	/* flex-direction: column; */
 
 	background-image: url('../assets/Backgrounds/bg13.jpg');
 
