--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -59,7 +59,7 @@ body {
 	flex-direction: column;
 }
 /* Animate Background Image */
-@-webkit-keyframes aitf {
+@keyframes aitf {
 	0% {
 		background-position: 0% 50%;
 	}
