--- a/src/components/Event/EventsContainer.module.css
+++ b/src/components/Event/EventsContainer.module.css
@@ -33,7 +33,7 @@
 .heading {
 	text-align: center;
 	/* padding-top: 100px; */
-	color: rgb(0, 84, 173);
+	color: #f06f2b;
 	font-size: 54px;
 	font-weight: 400;
 }
