--- a/src/components/EventModal/EventModal.module.css
+++ b/src/components/EventModal/EventModal.module.css
@@ -94,7 +94,7 @@
 	margin-top: px;
 	margin-bottom: 3px;
 	line-height: 0;
-	color: rgb(0, 92, 189);
+	color: #f06f2b;
 }
 
 .title {
@@ -125,7 +125,7 @@
 ::-webkit-scrollbar-thumb {
 	background: linear-gradient(
 		rgba(255, 255, 255, 0) 0%,
-		rgb(66 158 255) 35%,
+		#f06f2b 35%,
 		rgba(255, 255, 255, 0) 100%
 	);
 	opacity: 0.8;
