--- a/src/components/TeamComponents/team.css
+++ b/src/components/TeamComponents/team.css
@@ -6,7 +6,7 @@
 	height: 250px;
 	width: 240px;
 }
-.vertical {
-	color: blue;
-	width: '100%';
-}
+
+/* .hover:hover {
+	translate: scale(1.1);
+} */
